force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <description>Holds confirmed payment info for one or more invoices.</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RCPT-{000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>