force-app/main/default/objects/Receipt__c/fields/AmountReceived__c.field-meta.xml
<CustomField>
    <fullName>AmountReceived__c</fullName>
    <label>Amount Received</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>