force-app/main/default/objects/Receipt__c/fields/GatewayReference__c.field-meta.xml
<CustomField>
    <fullName>GatewayReference__c</fullName>
    <label>Gateway Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>