force-app/main/default/objects/Receipt__c/fields/OnlinePayment__c.field-meta.xml
<CustomField>
    <fullName>OnlinePayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Payment</label>
    <referenceTo>OnlinePayment__c</referenceTo>
    <relationshipLabel>Receipts (Online Payment)</relationshipLabel>
    <relationshipName>PaymentReceipts</relationshipName>
    <type>Lookup</type>
</CustomField>