force-app/main/default/objects/Receipt__c/fields/OnlinePaymentActivity__c.field-meta.xml
<CustomField>
    <fullName>OnlinePaymentActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Payment Activity</label>
    <referenceTo>OnlinePayment__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>