force-app/main/default/objects/Receipt__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>