force-app/main/default/objects/Receipt__c/fields/SAPDocumentNo__c.field-meta.xml
<CustomField>
    <fullName>SAPDocumentNo__c</fullName>
    <label>SAP Document No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>