force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>OnlinePayment__c</columns>
    <columns>AmountReceived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>